Layout e Lógica das Rotas 1 e 2 Completos

--- a/src/components/showtimes/showtimes.css
+++ b/src/components/showtimes/showtimes.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap');
+
+/* font-family: 'Roboto', sans-serif; */
+
 .catalog {
     height: 877px;
     width: 375px;
-    background-color: black;
+    background-color: white;
 }
 
 header {
@@ -42,8 +46,25 @@ h2 {
     text-align: center;
     color: #293845;
     margin-top: 40px;
+    margin-left: 70px;
     margin-bottom: 30px;
     box-sizing: border-box;
+}
+
+.pageTitle {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.movieDays {
+    margin-left: 23px;
+}
+
+.movieDay {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 23px;
 }
 
 h3 {
@@ -52,9 +73,25 @@ h3 {
     font-weight: 400;
     line-height: 28px;
     letter-spacing: 0.04em;
-    text-align: center;
+    text-align: left;
     color: #293845;
     box-sizing: border-box;
+}
+
+.movieShowtimes {
+    display: flex;
+    margin-top: 22px;
+}
+
+.movieHour {
+    height: 43px;
+    width: 82px;
+    background-color: #E8833A;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3px;
+    margin-right: 8px;
 }
 
 h4 {
