--- a/src/components/catalog/catalog.css
+++ b/src/components/catalog/catalog.css
@@ -5,7 +5,7 @@
 .catalog {
     height: 877px;
     width: 375px;
-    background-color: black;
+    background-color: white;
 }
 
 header {
@@ -38,7 +38,6 @@ main {
 
 .pageTitle {
     display: flex;
-
     width: 100%;
     align-items: center;
     justify-content: center;
@@ -67,6 +66,8 @@ h2 {
 }
 
 img {
+    height: 193px;
+    width: 129px;
     margin-bottom: 11px;
     border: 8px solid #FFFFFF;
     border-radius: 3px;
