--- a/src/components/seats/seats.css
+++ b/src/components/seats/seats.css
@@ -1,7 +1,7 @@
-.catalog {
+.seatsBody {
     height: 877px;
     width: 375px;
-    background-color: black;
+    background-color: white;
 }
 
 header {
@@ -23,17 +23,46 @@ h1 {
     color: #E8833A;
 }
 
-main {
+.seatsBody main {
     height: 693px;
     width: 100%;
     background-color: white;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
-    overflow-y: scroll;
+    align-items: center;
 }
 
-h2 {
+.seatsBody .userInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 25px;
+}
+
+.seatsBody input {
+    height: 51px;
+    width: 327px;
+    border-radius: 3px;
+    margin-bottom: 7px;
+    background: #FFFFFF;
+    border: 1px solid #D5D5D5;
+    border-radius: 3px;
+    padding-left: 18px;
+    box-sizing: border-box;
+}
+
+input ::placeholder {
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: #AFAFAF;
+}
+
+.seatsBody h2 {
     font-family: 'Roboto', sans-serif;
     font-size: 24px;
     font-weight: 400;
@@ -46,18 +75,18 @@ h2 {
     box-sizing: border-box;
 }
 
-h3 {
+.seatsBody h3 {
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 28px;
     letter-spacing: 0.04em;
-    text-align: center;
+    text-align: left;
     color: #293845;
     box-sizing: border-box;
 }
 
-h4 {
+.seatsBody h4 {
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
     font-weight: 400;
@@ -67,14 +96,122 @@ h4 {
     color: white;
 }
 
+.seatList {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 5px;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+
+}
+
+.seat {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 26px;
+    height: 26px;
+    background: #C3CFD9;
+    border: 1px solid #808F9D;
+    border-radius: 17px;
+    margin-left: 7px;
+    margin-bottom: 18px;
+}
+
+h6 {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 13px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: #000000;
+}
+
+.seatExemplification {
+    display: flex;
+    margin-top: 16px;
+}
+
+.seatExemplification p {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 15px;
+    display: flex;
+    align-items: center;
+    letter-spacing: -0.013em;
+    color: #4E5A65;
+}
+
+.seatSelected,
+.seatAvailable,
+.seatUnavailable {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 10px;
+    box-sizing: border-box;
+}
+
+.seatGreen,
+.seatGrey,
+.seatYellow {
+    display: flex;
+    width: 25px;
+    height: 25px;
+    border-radius: 17px;
+}
+
+.seatGreen {
+    background: #8DD7CF;
+    border: 1px solid #1AAE9E;
+}
+
+.seatGrey {
+    background: #C3CFD9;
+    border: 1px solid #7B8B99;
+}
+
+.seatYellow {
+    background: #FBE192;
+    border: 1px solid #F7C52B;
+}
+
+button {
+    margin-top: 27px;
+    margin-left: 53px;
+    padding-left: 28px;
+    width: 225px;
+    height: 42px;
+    background: #E8833A;
+    border-radius: 3px;
+    border: 1px #E8833A;
+
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+}
+
 footer {
     display: flex;
     height: 117px;
     width: 375px;
-    background-color: #C3CFD9;
-    border: 1px solid #9EADBA;
+    background-color: #DFE6ED;
+    border-top: 1px solid #9EADBA;
     align-items: center;
-
 }
 
 footer img {
