--- a/src/components/seats/seats.css
+++ b/src/components/seats/seats.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap');
+
 .seatsBody {
     height: 877px;
     width: 375px;
@@ -106,7 +108,7 @@ input ::placeholder {
 
 }
 
-.seat {
+.seatGrey {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -114,6 +116,32 @@ input ::placeholder {
     height: 26px;
     background: #C3CFD9;
     border: 1px solid #808F9D;
+    border-radius: 17px;
+    margin-left: 7px;
+    margin-bottom: 18px;
+}
+
+.seatYellow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 26px;
+    height: 26px;
+    background: #FBE192;
+    border: 1px solid #F7C52B;
+    border-radius: 17px;
+    margin-left: 7px;
+    margin-bottom: 18px;
+}
+
+.seatGreen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 26px;
+    height: 26px;
+    background: #8DD7CF;
+    border: 1px solid #1AAE9E;
     border-radius: 17px;
     margin-left: 7px;
     margin-bottom: 18px;
@@ -147,6 +175,8 @@ h6 {
     align-items: center;
     letter-spacing: -0.013em;
     color: #4E5A65;
+    margin-top: 5px;
+    box-sizing: border-box;
 }
 
 .seatSelected,
@@ -159,26 +189,26 @@ h6 {
     box-sizing: border-box;
 }
 
-.seatGreen,
-.seatGrey,
-.seatYellow {
+.seatDemoGreen,
+.seatDemoGrey,
+.seatDemoYellow {
     display: flex;
     width: 25px;
     height: 25px;
     border-radius: 17px;
 }
 
-.seatGreen {
+.seatDemoGreen {
     background: #8DD7CF;
     border: 1px solid #1AAE9E;
 }
 
-.seatGrey {
+.seatDemoGrey {
     background: #C3CFD9;
     border: 1px solid #7B8B99;
 }
 
-.seatYellow {
+.seatDemoYellow {
     background: #FBE192;
     border: 1px solid #F7C52B;
 }
@@ -192,7 +222,6 @@ button {
     background: #E8833A;
     border-radius: 3px;
     border: 1px #E8833A;
-
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 400;
