--- a/src/components/seats/seats.css
+++ b/src/components/seats/seats.css
@@ -119,6 +119,7 @@ input ::placeholder {
     border-radius: 17px;
     margin-left: 7px;
     margin-bottom: 18px;
+    cursor: pointer;
 }
 
 .seatYellow {
@@ -132,6 +133,7 @@ input ::placeholder {
     border-radius: 17px;
     margin-left: 7px;
     margin-bottom: 18px;
+    cursor: not-allowed;
 }
 
 .seatGreen {
@@ -145,6 +147,7 @@ input ::placeholder {
     border-radius: 17px;
     margin-left: 7px;
     margin-bottom: 18px;
+    cursor: pointer;
 }
 
 h6 {
